--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,35 +1,94 @@
-name: React CI
-
- 
-
 on:
-  push:
+ push:
+   branches:
+     - develop
+ pull_request:
     branches:
-      - "master"
+     - develop
 
- 
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+
+ #build job
+ build:
+
+   # Name of the job
+   name:  build
+  
+   # The  os to run the job on
+   runs-on: ubuntu-latest
+
+    # Steps 
+   steps:
+  
+   - name: Checkout Code
+
+     uses: actions/checkout@v2
+    
+   - name: Install node 16
+    
+     uses: actions/setup-node@v1
+
+     with:
+       node-version: 16.x
+
+
+   - name: Install NPM Dependencies
+
+     run: npm i
+  
+   - name: Build Project
+
+     run: npm run build #./dist
+
+   - name: Upload artifact in order to deploy
+     
+     uses: actions/upload-artifact@v2
+
+     with:
+
+       name: production-files
+
+       path: ./build
+
+        
+
+ #deploy job
+
+ deploy:
+
+   name: deploy
+
+   runs-on: ubuntu-latest
+
+   needs: build
+
+   steps:
+     - name: Download artifact
+
+       uses: actions/download-artifact@v3
+
+       with:
+         
+         name: production-files
+
+         path: ./build
+
+     - name: Deploy to gh pages
+
+       uses: peaceiris/actions-gh-pages@v3
+
+       with:
+
+         github_token: ${{secrets.DEPLOYMENTONGITHUBACCESSTOKEN}}
+
+         publish_dir: ./build
+
+        
+         
+
+
+
+
 
  
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
-    steps:
-      - uses: actions/checkout@v1
-      - run: npm install
-      - run: npm run build
-      - run: npm test
-      # - uses: jakejarvis/s3-sync-action@master
-        # with:
-        #   args: --acl public-read --follow-symlinks --delete
-        # env:
-        #   AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        #   AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
-        #   SOURCE_DIR: 'build'      # optional: defaults to entire repository
