added secrets to the workflow

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -78,7 +78,9 @@ jobs:
 
        with:
 
-         github_token: ${{secrets.FUCKU}}
+         github_token: ${{secrets.USERNAME}}
+         github_pass: ${{secrets.PASSWORD}}
+
 
          
 
