added host name

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -78,8 +78,9 @@ jobs:
 
        with:
 
-         github_token: ${{secrets.USERNAME}}
-         github_pass: ${{secrets.PASSWORD}}
+         host: ${{secrets.HOST_NAME}}
+         userName: ${{secrets.USERNAME}}
+         password: ${{secrets.PASSWORD}}
 
 
          
