--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,95 +1,38 @@
+name: Node.js CI
 on:
  push:
    branches:
      - master
-
-
+ 
 
 jobs:
 
  #build job
  build:
-
-   # Name of the job
-   name:  build
   
    # The  os to run the job on
-   runs-on: ubuntu-latest
-
+   runs-on: self-hosted
     # Steps 
+    
+   strategy:
+     matrix:
+      node-version: [16.x]
    steps:
   
-   - name: Checkout Code
-
-     uses: actions/checkout@v2
-    
-   - name: Install node 16
-    
-     uses: actions/setup-node@v1
-
+   - uses: actions/checkout@v3
+   - name: Use Node.js ${{ matrix.node-version}}
+     uses: actions/setup-node@v3
      with:
-       node-version: 16.x
+       node-version: ${{matrix.node-version}}
+       cache: 'npm'
+   - run: npm ci
+   - run: npm run build --if-present
+   - run: npm run build
+   
 
+ 
+   
 
-   - name: Install NPM Dependencies
-
-     run: npm i
-  
-   - name: Build Project
-
-     run: npm run build #./dist
-
-   - name: Upload artifact in order to deploy
-     
-     uses: actions/upload-artifact@v2
-
-     with:
-
-       name: production-files
-
-       path: ./build
-
-        
-
- #deploy job
-
- deploy:
-
-   name: deploy
-
-   runs-on: ubuntu-latest
-
-   needs: build
-
-   steps:
-     - name: Download artifact
-
-       uses: actions/download-artifact@v3
-
-       with:
-         
-         name: production-files
-
-         path: ./build
-
-     - name: Deploy to local box
-
-       uses: appleboy/ssh-action@master
-
-       with:
-
-         host: ${{secrets.HOST_NAME}}
-         userName: ${{secrets.USERNAME}}
-         password: ${{secrets.PASSWORD}}
-
-
-         
-
-        
-         
-
-
-
-
+    
 
  
