--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ jobs:
  build:
   
    # The  os to run the job on
-   runs-on: ubuntu-latest
+   runs-on: self-hosted
     # Steps 
     
    strategy:
@@ -25,7 +25,7 @@ jobs:
      with:
        node-version: ${{matrix.node-version}}
        cache: 'npm'
-   - run: npm ci
+   - run: npm i
    - run: npm run build --if-present
    - run: npm run build
    
