--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,8 @@ jobs:
  build:
   
    # The  os to run the job on
-   runs-on: self-hosted
+   runs-on: ubuntu-latest
+   
     # Steps 
     
    strategy:
